# c_practice

./: .gitignore  Makefile  README.md  SETUP.md
01_c_foundations/: Makefile  README.md
01_c_foundations/01_environment/: test_setup.c
01_c_foundations/02_basics/: exercises.c
01_c_foundations/03_pointers/: double_pointers.c  pointer_basics.c  pointer_bugs.c
01_c_foundations/04_memory/: custom_allocator.c  dynamic_arrays.c  memory_leaks.c
01_c_foundations/05_strings/: buffer_handling.c  string_parsing.c  string_utils.c
01_c_foundations/06_data_structures/: dynamic_buffer.c  hash_table.c  linked_list.c
01_c_foundations/07_makefiles/: Makefile.advanced  Makefile.basic
01_c_foundations/07_makefiles/exercise/: Makefile  README.md  main.c  math_utils.c  math_utils.h  string_utils.c  string_utils.h
01_c_foundations/08_gdb/: buggy_program.c  gdb_commands.md  segfault_examples.c
02_systems_networking/: Makefile  README.md
02_systems_networking/01_linux_basics/: commands_practice.md  example.txt
02_systems_networking/02_file_io/: binary_file.c  buffered_io.c  file_copy.c
02_systems_networking/03_sockets_basics/: socket_utils.c  socket_utils.h  tcp_client.c  tcp_server.c
02_systems_networking/04_protocol_design/: protocol_parser.c
02_systems_networking/05_file_transfer/: ft_client.c  ft_server.c
03_concurrency_ipc/: Makefile  README.md
03_concurrency_ipc/01_processes/: exec_example.c  fork_basics.c  process_tree.c
03_concurrency_ipc/02_threads_basics/: thread_args.c  thread_create.c  thread_return.c
03_concurrency_ipc/03_mutex/: counter_benchmark.c  deadlock.c  mutex_fix.c  race_condition.c
03_concurrency_ipc/04_condition_vars/: barrier  barrier.c  bounded_buffer.c  producer_consumer.c
03_concurrency_ipc/05_thread_pool/: pool_test.c  thread_pool.c  thread_pool.h  work_queue.c  work_queue.h
03_concurrency_ipc/06_shared_memory/: shm_reader.c  shm_sync.c  shm_writer.c
03_concurrency_ipc/07_message_queues/: mq_priority.c  mq_receiver.c  mq_sender.c
04_cpp_grpc/: CMakeLists.txt  README.md
04_cpp_grpc/01_cpp_basics/: classes.cpp  smart_pointers.cpp  stl_containers.cpp
04_cpp_grpc/02_protobuf/: messages.proto  proto_example.cpp
04_cpp_grpc/03_grpc/: keyvalue.proto  kv_client.cpp  kv_server.cpp
05_os_concepts/: README.md
05_os_concepts/01_virtualization/: scheduling.md
05_os_concepts/02_concurrency/: locks.md
capstone_project/: Makefile  README.md
capstone_project/include/: cache.h  file_utils.h  ipc_protocol.h  protocol.h  shm_manager.h  socket_utils.h  thread_pool.h  work_queue.h
capstone_project/src/: cache.c  cache_process.c  client.c  file_utils.c  monitor.c  protocol.c  proxy.c  proxy_ipc.c  server_mt.c  server_single.c  shm_manager.c  socket_utils.c  thread_pool.c  work_queue.c
capstone_project/tests/: test_cache.c  test_protocol.c  test_thread_pool.c
docker/: Dockerfile  docker-compose.yml
resources/: common_mistakes.md  gios_project_tips.md  recommended_reading.md
